<resources>
    <string name="app_name">Tamara mobile</string>
    <string name="therapist_details">Therapist details</string>
    <string name="way_of_treatment">Way of treatment</string>
    <string name="financial">Financial</string>
    <string name="health_indices">Health indices</string>
    <string name="back">return</string>
    <string name="connection_history">Connection history</string>
    <string name="search_between_dates">Search between dates</string>
    <string name="search_period">Search period</string>
    <string name="kitchen">Kitchen</string>
    <string name="indices">Indices</string>
    <string name="therapist">Therapist</string>
    <string name="messages">Messages</string>
    <string name="this_month">this month</string>
    <string name="previous_month">previous month</string>
    <string name="last_20_days">last 20 days</string>
    <string name="from">from</string>
    <string name="until">until</string>
    <string name="physical_parameters">Physical parameters</string>
    <string name="heart_rate">Heart rate:</string>
    <string name="languages">Language: </string>
    <string name="enter_id_from_watch">Enter id from watch</string>
    <string name="save">SAVE</string>
    <string name="transmitter_id">Transmitter id:</string>
    <string name="please_run_the_watch_app_and_create_new_transmitter_to_get_the_unique_id_and_enter_it_use_scan_beacons_button_to_add_beacons">Please run the watch app and create new transmitter to get the unique ID and enter it. Use Scan beacons button to add beacons.</string>
    <string name="beacons_list">Beacons list:</string>
    <string name="scan_beacons">Get beacons around you</string>
    <string name="stop_scan_beacons">Stop scanning</string>
    <string name="closest_room">Closest Room: </string>
    <string name="very_close_room">Very close room:</string>
    <string name="date">Date:</string>
    <string name="beacon_history">Beacons history</string>
    <string name="latest_beacon_found">Latest closest beacon found:</string>
    <string name="open_settings">Open settings</string>
    <string name="error">Error</string>
    <string name="location_permission_error">Location permission error</string>
    <string name="location_services_are_not_enabled">Location services are not enabled</string>
    <string name="scanning_for_bluetooth_peripherals_requires">Scanning for Bluetooth peripherals requires locations services to be enabled.</string>
    <string name="enable">Enable</string>
    <string name="we_need_bluetooth_for_scanning_beacons">We need Bluetooth for scanning beacons</string>
    <string name="retry">Retry</string>
    <string name="no_bluetooth_adapter">No bluetooth adapter</string>
    <string name="accelerate_value">Accelerate value:</string>
    <string name="gyroscope_value">Last tilt value:</string>
    <string name="temperature">Temperature:</string>
    <string name="beacon_dialog_hint_text">Service setup instruction:\n1. Run the Tamara app on the watch.\n2. Create a Watch profile by entering its name (Transmitter name). Tap Save.\n3. Get the unique Watch ID and put it into a mobile app (Transmitter ID). Tap Save.\n4. Tap Get beacons around you to scan and add beacons.\n5. Go back to the watch and tap Run service. The watch is now a transmitter between beacons and the server (if the screen is green).</string>
    <string name="get_beacons_around_you_and_link_relevant_beacons_with_the_room_name_you_want">Get beacons around you and link relevant beacons with the room name you want</string>
    <string name="beacon_mac_address">Beacon Mac-Address:</string>
    <string name="current_room">Current room:</string>
    <string name="cancel">Cancel</string>
    <string name="link_the_room">Link the room</string>
    <string name="choose_new_room_to_update_info">Choose new room to update info</string>
    <string name="transmitter_does_not_exist">Transmitter does not exist</string>
    <string name="proximity">Proximity</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="bedroom">Bedroom</string>
    <string name="enter">Enter</string>
    <string name="bathroom">Bathroom</string>
    <string name="toilet">Toilet</string>
    <string name="guestroom">Guestroom</string>
    <string name="gyroscope_changes">Amount of significant tilts:</string>
    <string name="to_set_up_beacon_stop_scanning_process">To set up beacon stop scanning process</string>
</resources>