<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/search_period"
            android:textColor="@color/gun_powder"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/thisMonth"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_gray_et"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingHorizontal="24dp"
            android:singleLine="true"
            android:text="@string/this_month"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/previousMonth"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_gray_et"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingHorizontal="24dp"
            android:singleLine="true"
            android:text="@string/previous_month"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/last20Days"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_gray_et"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingHorizontal="24dp"
            android:singleLine="true"
            android:text="@string/last_20_days"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/search_between_dates"
            android:textColor="@color/gun_powder"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_stroke"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/from"
            android:textColor="@color/gun_powder"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow_down" />

        <TextView
            android:id="@+id/until"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_stroke"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/until"

            android:textColor="@color/gun_powder"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow_down" />


        <TextView
            android:id="@+id/btnFilter"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_blue"
            android:gravity="center"
            android:text="@string/search_between_dates"
            android:textColor="@color/gun_powder"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</layout>