<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/beaconMacAddressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/beacon_mac_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/beaconMacAddressValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="@id/beaconMacAddressText"
                    app:layout_constraintStart_toEndOf="@id/beaconMacAddressText"
                    app:layout_constraintTop_toTopOf="@id/beaconMacAddressText"
                    tools:text="AS:13:AD:123:VD:12" />

                <TextView
                    android:id="@+id/currentRoomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/current_room"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/beaconMacAddressText" />

                <TextView
                    android:id="@+id/currentRoomValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="@id/currentRoomText"
                    app:layout_constraintStart_toEndOf="@id/currentRoomText"
                    app:layout_constraintTop_toTopOf="@id/currentRoomText"
                    tools:text="Kitchen" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/roomChooseRecycler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/currentRoomText"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_room_choose" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/roomChooseRecycler">

                    <TextView
                        android:id="@+id/cancelButtonTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/cancel"
                        android:textStyle="bold" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/saveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="12dp"
                    app:cardCornerRadius="16dp"
                    app:cardBackgroundColor="@color/main"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cancelButton">

                    <TextView
                        android:id="@+id/saveButtonTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:textColor="@color/white"
                        android:text="@string/save"
                        android:textStyle="bold" />
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

</layout>