<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="item"
            type="com.tamara.care.watch.data.entity.ProximityItemEntity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            tools:context=".presentation.proximity.ProximityFragment">

            <TextView
                android:id="@+id/dateTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textColor="@color/black" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/dateTitleTextView"
                app:layout_constraintStart_toEndOf="@id/dateTitleTextView"
                app:layout_constraintTop_toTopOf="@id/dateTitleTextView"
                app:time="@{item.dateTime}"
                tools:text="Fri, Oct 22, 17:00"
                tools:textColor="@color/black" />

            <TextView
                android:id="@+id/closestRoomTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/closest_room"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="@{item.closestRoom == null ? View.GONE : View.VISIBLE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateTitleTextView"
                tools:textColor="@color/black" />

            <TextView
                android:id="@+id/closestRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/closestRoomTitleTextView"
                app:layout_constraintStart_toEndOf="@id/closestRoomTitleTextView"
                app:layout_constraintTop_toTopOf="@id/closestRoomTitleTextView"
                app:proximityValue="@{item.closestRoom}"
                app:rssiValue="@{item.closestRoomSignal}"
                tools:text="Bedroom (132)"
                tools:textColor="@color/black" />

            <TextView
                android:id="@+id/veryCloseRoomTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/very_close_room"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/closestRoomTitleTextView"
                tools:textColor="@color/black" />

            <TextView
                android:id="@+id/veryClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/veryCloseRoomTitleTextView"
                app:layout_constraintTop_toTopOf="@id/veryCloseRoomTitleTextView"
                tools:text="Kitchen (86)"
                tools:textColor="@color/black" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>