<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintBottom_toTopOf="@id/refresh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="start|center_vertical"
                    android:src="@drawable/ic_back" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo" />

                <ImageView
                    android:id="@+id/drawer"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end|center_vertical"
                    android:foreground="?selectableItemBackground"
                    android:src="@drawable/ic_burger" />
            </FrameLayout>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/refresh"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:translationZ="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/transmitterCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/mercury"
                        android:elevation="8dp"
                        android:padding="16dp"
                        app:cardCornerRadius="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/transmitter_id"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/transmitterIdTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="123" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/scanButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        app:cardCornerRadius="16dp">

                        <TextView
                            android:id="@+id/scanButtonTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/scan_beacons"
                            android:textStyle="bold" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/smallHintAboutBeacons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:paddingHorizontal="8dp"
                        android:text="@string/get_beacons_around_you_and_link_relevant_beacons_with_the_room_name_you_want"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/beaconsListText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="4dp"
                        android:text="@string/beacons_list"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/beaconRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="6"
                        tools:listitem="@layout/item_setup_beacon" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
